--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 <div class="home-callout text-center container-fluid">
-  <h1>Bienvenido a nuestra página de inicio.</h1>
-  <h3>Un sitio donde desarrolladores pueden conocer emprendedores.</h3>
+  <h1>Welcome to DevMatch.</h1>
+  <h3>A site where entrepreneurs can meet developers.</h3>
 </div>
