--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,5 @@
-<h1>About Page</h1>
+<div class="container text-center">
+    <h1>About Page</h1>
+    <p>We are DevMatch. Our Company focuses on creating an exclusive community
+    for developers and entreprenaurs to meet.</p>
+</div>
