--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <h3 class="text-center">Contact Us</h3>
+    <h3 class="text-center">Contáctenos</h3>
     
     <div class="col-md-4 col-md-offset-4">
       <div class="well">
@@ -20,7 +20,7 @@
             <%= f.text_area :comments, class: 'form-control' %>
           </div>
       
-          <%= f.submit 'Submit', class: 'btn btn-default' %>
+          <%= f.submit 'Enviar', class: 'btn btn-default' %>
         <% end %>
       </div>
     </div>
