--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Saasapp</title>
+    <title>Easy Job</title>
     <%= csrf_meta_tags %>
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -20,13 +20,13 @@
           </button>
           <%= link_to root_path, class: "navbar-brand" do %> 
             <i class="fa fa-group"></i>
-            DevMatch
+            Easy Job
           <% end %>
         </div>
         <div class="collapse navbar-collapse" id="main-nav-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "About", about_path %></li>
-            <li><%= link_to "Contact Us", new_contact_path %></li>
+            <li><%= link_to "Acerca De", about_path %></li>
+            <li><%= link_to "Contacto", new_contact_path %></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div>
