--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <div class="container text-center">
-  <h1>About Page</h1>
-  <p>We are DevMatch. Our Company focuses on creating an exclusive community
-  for developers and entreprenaurs to meet.</p>
+  <h1>Acerca de Nosotros</h1>
+  <p>Somos Easy Job. Una compañía enfocada en crear una comunidad donde 
+  emprendedores y estudiantes de la Escuela Politécnica Nacional puedan encontrarse.</p>
 </div>
