--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 <div class="home-callout text-center container-fluid">
-  <h1>Welcome to DevMatch.</h1>
-  <h3>A site where entrepreneurs can meet developers.</h3>
+  <h1>Bienvenidos a Easy Job.</h1>
+  <h3>Una comunidad para juntar emprendedores y estudiantes de la Escuela Politécnica Nacional.</h3>
 </div>
