--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
 <div class="home-callout text-center container-fluid">
   <h1>Bienvenidos a Easy Job.</h1>
   <h3>Una comunidad para juntar emprendedores y estudiantes de la Escuela Politécnica Nacional.</h3>
+  <h2>UNETE!!</h2>
 </div>
