--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,5 +2,5 @@
   <h1>Acerca de Nosotros</h1>
   <p>Somos Easy Job. Una compañía enfocada en crear una comunidad donde 
   emprendedores y estudiantes de la Escuela Politécnica Nacional puedan encontrarse.</p>
-  <h4>Desarrollado por estudiantes de la EPN.</h4>
+  <p>Desarrollado por estudiantes de la EPN.</p>
 </div>
