Cambio de Compañia a red social
--

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <div class="container text-center">
   <h1>Acerca de Nosotros</h1>
-  <p>Somos Easy Job. Una compañía enfocada en crear una comunidad donde 
+  <p>Somos Easy Job. Una red social enfocada en crear una comunidad donde 
   emprendedores y estudiantes de la Escuela Politécnica Nacional puedan encontrarse.</p>
   <p>Desarrollado por estudiantes de la EPN.</p>
 </div>
