--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="home-header text-center container-fluid">
-  <h1>Welcome to DevMatch!</h1>
-  <h3>A membership site where entrepreneurs and developers can meet.</h3>
+  <h1>Bienvenidos a Easy job</h1>
+  <h3>Una comunidad para juntar emprendedores y estudiantes de la Escuela Politécnica Nacional.</h3>
 </div>
 
 <!-- Sign up buttons -->
