--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <h3 class="text-center">Contact Us</h3>
+    <h3 class="text-center">Contáctanos</h3>
     <br>
     
     <div class="col-md-4 col-md-offset-4">
