--- a/app/views/devise/registrations/_basic_form.html.erb
+++ b/app/views/devise/registrations/_basic_form.html.erb
@@ -25,7 +25,7 @@
   </div>
   
   <div class="actions form-group">
-  <%= f.submit "Sign up", class: 'btn btn-success' %>
+  <%= f.submit "Regístrate", class: 'btn btn-success' %>
   </div>
   
 <% end %>
