--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,11 +1,22 @@
 <div class="container">
-  <div class="col-md-6">
-  <h1 class="text-center">About Us</h1>
-  <p>We are DevMatch. Our company focuses on creating an exclusive community
-      for students, developers, investors, and entrepreneurs to meet.</p><br>
-  </div>
+
+  <h1 class="text-center">Acerca de nosotros</h1>
+  <p>Te damos la bienvenida a EasyJob, una red social con usuarios como empresarios
+  de diferentes lugares del Ecuador y estudiantes de la Escuela Politécnica Nacional<br /><br />
+  Misión<br /><br />
+  Nuestra misión es sencilla: conectar a empresarios del Ecuador con estudiantes 
+  de la Escuela Politécnica Nacional, para ayudarles mutuamente a mejorar, a los 
+  estudiantes en el aspecto de experiencia y a los empresarios en productividad y 
+  rendimiento gracias a los estudiantes de esta prestigiosa universidad. Al unirte
+  a EasyJob obtienes acceso a personas, empleos, actualizaciones e información 
+  que te ayudará a destacar en el campo profesional.<br /><br />
+  Información del Sitio Web<br /><br />
+  EasyJob fue ideado en el presente año, en la Escuela Politécnica Nacional, gracias
+  al equipo de trabajo que desarrolla el sitio, conformado por Johanna Arias,
+  Alexander Olmedo, Mayra Rosero y Roberto Toapanta, y se espera lanzarlo próximamente..</p><br>
+
   
-  <div class="col-md-6">
+  <!--<div class="col-md-6">
       <%= image_tag("aboutus.png", class: "img-responsive") %>
-  </div>
+  </div>-->
 </div>
