--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,9 +47,9 @@
             
             <!-- Show Log Out button if user signs in -->
             <% if user_signed_in? %>
-              <%= link_to "Log Out", destroy_user_session_path, method: :delete, class:"btn btn-default navbar-btn" %>
+              <%= link_to "Cerrar Sesión", destroy_user_session_path, method: :delete, class:"btn btn-default navbar-btn" %>
             <% else %>
-              <%= link_to "Log In", new_user_session_path, class: "btn btn-default navbar-btn" %>
+              <%= link_to "Iniciar Sesión", new_user_session_path, class: "btn btn-default navbar-btn" %>
             <% end %>
             
           </div>
