--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
-      <h1 class="text-center">DevMatch Community</h1><br>
-      <p class="text-center">Welcome to the DevMatch community! Users must fill out a profile inorder to be visible by the community.</p><br>
+      <h1 class="text-center">Comunidad EasyJob</h1><br>
+      <p class="text-center">Bienvenido a la comunidad Easyjob! Los usuarios deben llenar un perfil para ser visibles por la comunidad.</p><br>
       <ul class="list-unstyled">
         <% @users.each do |user| %>
           <!-- Checks if the user has a profile -->
