--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,8 +8,8 @@
           <h1>Pro Account</h1>
           <p>Sign up for the pro account and get access to the community and contact information for only $1/month!</p>
         <% else %>
-          <h1>Basic Account</h1>
-          <p>Sign up for the basic account and get basic access to the community.</p>
+          <h1>Cuenta Básica</h1>
+          <p>Regístrate y consigue acceso a la comunidad de empresarios y estudiantes.</p>
         <% end %>
       </div>
       
