--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -49,14 +49,14 @@
       </div>
       
       <!-- Pro Membership -->
-      <div class="col-md-6">
+      <!--<div class="col-md-6">
         <div class="well">
           <h2 class="text-center">Membresía Premium</h2>
           <h4 class="text-center">Consigue acceso total a la comunidad de empresarios y estudiantes de la EPN po solo $1/mes!</h4>
           <br>
           <%= link_to "Registro Premium", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
         </div>
-      </div>
+      </div>-->
     
     <% end %>
     
