--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -36,6 +36,6 @@
   </div>
   
   <div class="form-group">
-    <%= f.submit "Update Profile", class: 'btn btn-primary' %>
+    <%= f.submit "Actualizar Perfil", class: 'btn btn-primary' %>
   </div>
 <% end %>
