--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -37,7 +37,7 @@
     
     <% else %>
       <!-- Basic Membership -->
-      <div class="col-md-6">
+      <div class="container">
         <div class="well">
           <h2 class="text-center">Membresía Básica</h2>
           <h4 class="text-center">Regístrate gratis y consigue un acceso básico a la comunidad de estudiantes y empresarios</h4>
