--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,12 +1,14 @@
 <!-- Multipart allows us to upload images -->
 <%= form_for @profile, url: user_profile_path, :html => { :multipart => true } do |f| %>
   <div class="form-group">
-    <%= f.label :first_name %>
+    <!--%= f.label :first_name %>-->
+    <label for="first_name">Nombre</label>
     <%= f.text_field :first_name, class: 'form-control' %>
   </div>
   
   <div class="form-group">
-    <%= f.label :last_name %>
+    <!--<%= f.label :last_name %>-->
+    <label for="last_name">Apellido</label>
     <%= f.text_field :last_name, class: 'form-control' %>
   </div>
   
@@ -16,26 +18,30 @@
   </div>
   
   <div class="form-group">
-    <%= f.label :job_title %>
+    <!--<%= f.label :job_title %>-->
+    <label for="job_title">Título</label>
     <%= f.select :job_title, ['Developer', 'Entrepreneur', 'Investor', 'Student'], {}, class: 'form-control' %>
   </div>
   
   <div class="form-group">
-    <%= f.label :phone_number %>
+    <!--<%= f.label :phone_number %>-->
+    <label for="phone_number">Teléfono</label>
     <%= f.text_field :phone_number, class: 'form-control' %>
   </div>
   
   <div class="form-group">
-    <%= f.label :contact_email %>
+    <!--<%= f.label :contact_email %>-->
+    <label for="contact_email">Correo de contacto</label>
     <%= f.text_field :contact_email, class: 'form-control' %>
   </div>
   
   <div class="form-group">
     <%= f.label :description %>
+    <label for="description">Descripción</label>
     <%= f.text_area :description, class: 'form-control' %>
   </div>
   
   <div class="form-group">
-    <%= f.submit "Update Profile", class: 'btn btn-primary' %>
+    <%= f.submit "Actualizar Perfil", class: 'btn btn-primary' %>
   </div>
 <% end %>
