--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -36,7 +36,7 @@
   </div>
   
   <div class="form-group">
-    <%= f.label :description %>
+    <!--<%= f.label :description %>-->
     <label for="description">Descripción</label>
     <%= f.text_area :description, class: 'form-control' %>
   </div>
