--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -9,17 +9,20 @@
         <%= form_for @contact do |f| %>
         
           <div class="form-group">
-            <%= f.label :name %>
+            <!--<%= f.label :name %>-->
+            <label for="name">Nombre</label>
             <%= f.text_field :name, class: 'form-control' %>
           </div>
           
           <div class="form-group">  
-            <%= f.label :email %>
+            <!--<%= f.label :email %>-->
+            <label for="email">Correo</label>
             <%= f.text_field :email, class: 'form-control' %>
           </div>
           
           <div class="form-group">  
-            <%= f.label :comments %>
+            <!--<%= f.label :comments %>-->
+            <label for="comments">Comentarios</label>
             <%= f.text_area :comments, class: 'form-control' %>
           </div>
             
