--- a/app/views/devise/registrations/_basic_form.html.erb
+++ b/app/views/devise/registrations/_basic_form.html.erb
@@ -7,20 +7,23 @@
   <%= hidden_field_tag 'plan', params[:plan] %> 
   
   <div class="field form-group">
-  <%= f.label :email %><br />
+  <!--<%= f.label :email %><br />-->
+  <label for="email">Correo</label>
   <%= f.email_field :email, autofocus: true, class: 'form-control' %>
   </div>
   
   <div class="field form-group">
-  <%= f.label :password %>
+  <!--<%= f.label :password %>-->
+  <label for="password">Contraseña</label>
   <% if @minimum_password_length %>
-  <em>(<%= @minimum_password_length %> characters minimum)</em>
+  <em>(<%= @minimum_password_length %> caracteres mínimo)</em>
   <% end %><br />
   <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
   </div>
   
   <div class="field form-group">
-  <%= f.label :password_confirmation %><br />
+  <!--<%= f.label :password_confirmation %><br />-->
+  <label for="password">Confirmar Contraseña</label>
   <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
   </div>
   
