--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -8,8 +8,9 @@
         <!-- Form Helper Code with Rails which automatically generates-->
         <%= form_for @contact do |f| %>
         
-          <div class="form-group">
-            <%= f.label :name %>
+          <div class="form-group">            
+            <!--<%= f.label :name %>-->
+            <label for="name">Nombre</label>
             <%= f.text_field :name, class: 'form-control' %>
           </div>
           
