--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,7 +17,7 @@
       
       <!-- Inject either basic or pro form -->
       <div class="well">
-        <h2>Sign up</h2>
+        <h2>Regístrate</h2>
         <% if params[:plan] == '2' %>
           <%= render "pro_form" %>
         <% else %>
