--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -20,7 +20,7 @@
   <div class="form-group">
     <!--<%= f.label :job_title %>-->
     <label for="job_title">Título</label>
-    <%= f.select :job_title, ['Developer', 'Entrepreneur', 'Investor', 'Student'], {}, class: 'form-control' %>
+    <%= f.select :job_title, ['Emprendedor', 'Estudiante'], {}, class: 'form-control' %>
   </div>
   
   <div class="form-group">
