--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@
             <li><%= link_to "Contáctanos", new_contact_path %></li>
             
             <% if user_signed_in? %>
-              <li><%= link_to "Comunidad", users_path %></li>
+              <!--<li><%= link_to "Comunidad", users_path %></li>-->
               <li><%= link_to "Mi cuenta", edit_user_registration_path %></li>
             <% end %>
             
