--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -31,7 +31,7 @@
           </div>
         
           <div class="field form-group">
-            <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+            <%= f.label :current_password %> <i>(Ingrese la contraseña actual para poder modificarla)</i><br />
             <%= f.password_field :current_password, autocomplete: "off", class: 'form-control' %>
           </div>
         
