Tamaño de letra

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,16 +1,16 @@
 <div class="container">
 
   <h1 class="text-center">Acerca de nosotros</h1>
-  <p>Te damos la bienvenida a EasyJob, una red social con usuarios como empresarios
+  <p class="lead">Te damos la bienvenida a EasyJob, una red social con usuarios como empresarios
   de diferentes lugares del Ecuador y estudiantes de la Escuela Politécnica Nacional<br /><br />
-  Misión<br /><br />
+  <b>Misión</b><br /><br />
   Nuestra misión es sencilla: conectar a empresarios del Ecuador con estudiantes 
   de la Escuela Politécnica Nacional, para ayudarles mutuamente a mejorar, a los 
   estudiantes en el aspecto de experiencia y a los empresarios en productividad y 
   rendimiento gracias a los estudiantes de esta prestigiosa universidad. Al unirte
   a EasyJob obtienes acceso a personas, empleos, actualizaciones e información 
   que te ayudará a destacar en el campo profesional.<br /><br />
-  Información del Sitio Web<br /><br />
+  <b>Información del Sitio Web</b><br /><br />
   EasyJob fue ideado en el presente año, en la Escuela Politécnica Nacional, gracias
   al equipo de trabajo que desarrolla el sitio, conformado por Johanna Arias,
   Alexander Olmedo, Mayra Rosero y Roberto Toapanta, y se espera lanzarlo próximamente..</p><br>
