--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -31,8 +31,7 @@
         <div class="well">
           <h2 class="text-center">La Comunidad</h2>
           <p class="text-center">Visita la comunidad para conocer otros estudiantes de la EPN y otros empresarios!</p>
-          <!--<%= link_to "Visitar la comunidad", users_path, class: 'btn btn-primary btn-lg btn-block' %>-->
-          <a class="btn btn-primary btn-lg btn-block">Visitar la comunidad</a>
+          <%= link_to "Visitar la comunidad", users_path, class: 'btn btn-primary btn-lg btn-block' %>
         </div>
       </div>
     
