--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -25,6 +25,9 @@
                   <% end %>
                   <p>
                     <%= user.profile.job_title %>
+                    <br />
+                    <%= user.profile.carrera %>
+                    
                     <% if user.plan_id == 2 %>
                       <span class="label label-danger">PRO</span>
                     <% end %>
