Agregado link emprendedores

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,10 +5,10 @@
       <!-- Depending on which plan the user looks at, inject the right title -->
       <div class="text-center">
         <% if params[:plan] == '2' %>
-          <h1>Pro Account</h1>
-          <p>Sign up for the pro account and get access to the community and contact information for only $1/month!</p>
+          <h1>Membresía Emprendedor</h1>
+          <p>El acceso para emprendedores tiene el costo de tan solo $1 al mes</p>
         <% else %>
-          <h1>Cuenta Básica</h1>
+          <h1>Membresía Estudiante</h1>
           <p>Regístrate y consigue acceso a la comunidad de empresarios y estudiantes.</p>
         <% end %>
       </div>
