--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -54,8 +54,7 @@
           <h2 class="text-center">Membresía para Emprendedores</h2>
           <h4 class="text-center">Consigue acceso total a la comunidad de estudiantes calificados para resolver las necesidades de tu empresa</h4>
           <br>
-          <a class="btn btn-success btn-lg btn-block" >Registro Emprendedores</a>
-          <!--<%= link_to "Registro Emprendedores", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>-->
+          <%= link_to "Registro Emprendedores", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
         </div>
       </div>
     
