--- a/app/views/devise/registrations/_pro_form.html.erb
+++ b/app/views/devise/registrations/_pro_form.html.erb
@@ -7,35 +7,41 @@
   <%= hidden_field_tag 'plan', params[:plan] %> 
   
   <div class="field form-group">
-  <%= f.label :email %><br />
+  <!--<%= f.label :email %><br />-->
+  <label for="email">Correo</label>
   <%= f.email_field :email, autofocus: true, class: 'form-control' %>
   </div>
   
   <div class="field form-group">
-  <%= f.label :password %>
+  <!--<%= f.label :password %>-->
+  <label for="password">Contraseña</label>
   <% if @minimum_password_length %>
-  <em>(<%= @minimum_password_length %> characters minimum)</em>
+  <em>(<%= @minimum_password_length %> caracteres mínimo)</em>
   <% end %><br />
   <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
   </div>
   
   <div class="field form-group">
-  <%= f.label :password_confirmation %><br />
+  <!--<%= f.label :password_confirmation %><br />-->
+  <label for="password_confirmation">Confirma la contraseña</label>
   <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
   </div>
   
   <div class="field form-group">
-    <%= label_tag :card_number, "Credit Card Number" %>
+    <!--<%= label_tag :card_number, "Credit Card Number" %>-->
+    <label for="card_number">Número de Tarjeta de Crédito</label>
     <%= text_field_tag :card_number, nil, name: nil, class: "form-control" %>
   </div>
   
   <div class="field form-group">
-    <%= label_tag :card_code, "Security Code on Card (CVV)" %>
+    <!--<%= label_tag :card_code, "Security Code on Card (CVV)" %>-->
+    <label for="card_code">Código de seguridad (CVV)</label>
     <%= text_field_tag :card_code, nil, name: nil, class: "form-control" %>
   </div>
   
   <div class="form-group">
     <%= label_tag :card_month, "Card Expiration" %>
+    <label for="card_month">Fecha de Expiración</label>
     <!-- Drop Down Menus using Rails -->
     <%= select_month nil, {add_month_numbers: true}, {name: nil, id: "card_month" } %>
     <!-- Finds the current date and makes a drop down menu -->
@@ -43,7 +49,7 @@
   </div>
   
   <div class="actions form-group">
-  <%= f.submit "Sign up", class: 'btn btn-success', id: 'form-signup-btn' %>
+  <%= f.submit "Regístrate", class: 'btn btn-success', id: 'form-signup-btn' %>
   </div>
   
 <% end %>
