--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,76 +1,161 @@
 <!-- Multipart allows us to upload images -->
 <%= form_for @profile, url: user_profile_path, :html => { :multipart => true } do |f| %>
-  <div class="form-group">
-    <!--%= f.label :first_name %>-->
-    <label for="first_name">Nombre</label>
-    <%= f.text_field :first_name, class: 'form-control' %>
-  </div>
+
+
+  <!--------------------------------------------- Formulario para estudiantes ------------------------------------------->
+  <% if current_user.plan_id == 1 %>
+    <div class="form-group">
+      <!--%= f.label :first_name %>-->
+      <label for="first_name">Nombre</label>
+      <%= f.text_field :first_name, class: 'form-control' %>
+    </div>
   
-  <div class="form-group">
-    <!--<%= f.label :last_name %>-->
-    <label for="last_name">Apellido</label>
-    <%= f.text_field :last_name, class: 'form-control' %>
-  </div>
   
-  <div class="form-group">
-    <%= f.label :avatar %>
-    <%= f.file_field :avatar, class: 'form-control' %>
-  </div>
+    <div class="form-group">
+      <!--<%= f.label :last_name %>-->
+      <label for="last_name">Apellido</label>
+      <%= f.text_field :last_name, class: 'form-control' %>
+    </div>
+    
+    <div class="form-group">
+      <%= f.label :avatar %>
+      <%= f.file_field :avatar, class: 'form-control' %>
+    </div>
+    
+    <div class="form-group">
+      <!--<%= f.label :job_title %>-->
+      <label for="job_title">Título</label>
+      <%= f.select :job_title, ['Estudiante'], {}, class: 'form-control' %>
+    </div>
+    
+    <div class="form-group">
+      <!--<%= f.label :phone_number %>-->
+      <label for="phone_number">Teléfono</label>
+      <%= f.text_field :phone_number, class: 'form-control' %>
+    </div>
+    
+    <div class="form-group">
+      <!--<%= f.label :contact_email %>-->
+      <label for="contact_email">Correo de contacto</label>
+      <%= f.text_field :contact_email, class: 'form-control' %>
+    </div>
+    
+    <div class="form-group">
+      <!--<%= f.label :facultad %>-->
+      <label for="facultad">Facultad</label>
+      <%= f.select :facultad, ['Facultad de Sistemas', 'Facultad Eléctrica y Electrónica', 'Facultad de Ciencias', 'Facultad de Ciencias Administrativas', 'Facultad de Ingeniería Civil Y Ambiental',
+      'Facultad de Geología y Petroleos', 'Facultad de Mecánica', 'Facultad de Quimica y Agroindustrial', 'ESFOT'], {}, class: 'form-control' %>
+    </div>
+    
+     <div class="form-group">
+      <!--<%= f.label :carrera %>-->
+      <label for="carrera">Carrera</label>
+      <%= f.text_area :carrera, class: 'form-control' %>
+    </div>
+    
+    <div class="form-group">
+      <!--<%= f.label :semestre %>-->
+      <label for="semestre">Semestre</label>
+      <%= f.select :semestre, ['Primero', 'Segundo', 'Tercero', 'Cuarto', 'Quinto', 'Sexto', 'Septimo', 'Octavo', 'Noveno', 'Decimo'], {}, class: 'form-control' %>
+    </div>
+    
+    <div class="form-group">
+      <!--<%= f.label :habilidades %>-->
+      <label for="habilidades">Habilidades</label>
+      <%= f.text_area :habilidades, class: 'form-control' %>
+    </div>
+    
+    <div class="form-group">
+      <!--<%= f.label :idiomas %>-->
+      <label for="idiomas">Idiomas</label>
+      <%= f.text_area :idiomas, class: 'form-control' %>
+    </div>
+    
+    <div class="form-group">
+      <!--<%= f.label :ubicacion %>-->
+      <label for="ubicacion">Ubicación</label>
+      <%= f.text_area :ubicacion, class: 'form-control' %>
+    </div>
+    
+  <!-- ----------------------------------Formulario para emprendedores -------------------------------------->
+  <% else %>
+    
+    <div class="form-group">
+      <!--%= f.label :first_name %>-->
+      <label for="first_name">Nombre</label>
+      <%= f.text_field :first_name, class: 'form-control' %>
+    </div>
   
-  <div class="form-group">
-    <!--<%= f.label :job_title %>-->
-    <label for="job_title">Título</label>
-    <%= f.select :job_title, ['Estudiante'], {}, class: 'form-control' %>
-  </div>
   
-  <div class="form-group">
-    <!--<%= f.label :phone_number %>-->
-    <label for="phone_number">Teléfono</label>
-    <%= f.text_field :phone_number, class: 'form-control' %>
-  </div>
-  
-  <div class="form-group">
-    <!--<%= f.label :contact_email %>-->
-    <label for="contact_email">Correo de contacto</label>
-    <%= f.text_field :contact_email, class: 'form-control' %>
-  </div>
-  
-  <div class="form-group">
-    <!--<%= f.label :facultad %>-->
-    <label for="facultad">Facultad</label>
-    <%= f.select :facultad, ['Facultad de Sistemas', 'Facultad Eléctrica y Electrónica', 'Facultad de Ciencias', 'Facultad de Ciencias Administrativas', 'Facultad de Ingeniería Civil Y Ambiental',
-    'Facultad de Geología y Petroleos', 'Facultad de Mecánica', 'Facultad de Quimica y Agroindustrial', 'ESFOT'], {}, class: 'form-control' %>
-  </div>
-  
-   <div class="form-group">
-    <!--<%= f.label :carrera %>-->
-    <label for="carrera">Carrera</label>
-    <%= f.text_area :carrera, class: 'form-control' %>
-  </div>
-  
-  <div class="form-group">
-    <!--<%= f.label :semestre %>-->
-    <label for="semestre">Semestre</label>
-    <%= f.select :semestre, ['Primero', 'Segundo', 'Tercero', 'Cuarto', 'Quinto', 'Sexto', 'Septimo', 'Octavo', 'Noveno', 'Decimo'], {}, class: 'form-control' %>
-  </div>
-  
-  <div class="form-group">
-    <!--<%= f.label :habilidades %>-->
-    <label for="habilidades">Habilidades</label>
-    <%= f.text_area :habilidades, class: 'form-control' %>
-  </div>
-  
-  <div class="form-group">
-    <!--<%= f.label :idiomas %>-->
-    <label for="idiomas">Idiomas</label>
-    <%= f.text_area :idiomas, class: 'form-control' %>
-  </div>
-  
-  <div class="form-group">
-    <!--<%= f.label :ubicacion %>-->
-    <label for="ubicacion">Ubicación</label>
-    <%= f.text_area :ubicacion, class: 'form-control' %>
-  </div>
+    <div class="form-group">
+      <!--<%= f.label :last_name %>-->
+      <label for="last_name">Apellido</label>
+      <%= f.text_field :last_name, class: 'form-control' %>
+    </div>
+    
+    <div class="form-group">
+      <%= f.label :avatar %>
+      <%= f.file_field :avatar, class: 'form-control' %>
+    </div>
+    
+    <div class="form-group">
+      <!--<%= f.label :job_title %>-->
+      <label for="job_title">Título</label>
+      <%= f.select :job_title, ['Emprendedor'], {}, class: 'form-control' %>
+    </div>
+    
+    <div class="form-group">
+      <!--<%= f.label :phone_number %>-->
+      <label for="phone_number">Teléfono</label>
+      <%= f.text_field :phone_number, class: 'form-control' %>
+    </div>
+    
+    <div class="form-group">
+      <!--<%= f.label :contact_email %>-->
+      <label for="contact_email">Correo de contacto</label>
+      <%= f.text_field :contact_email, class: 'form-control' %>
+    </div>
+    
+    <div class="form-group">
+      <!--<%= f.label :facultad %>-->
+      <label for="facultad">Empresa</label>
+      <%= f.text_field :facultad, class: 'form-control' %>
+    </div>
+    
+     <div class="form-group">
+      <!--<%= f.label :carrera %>-->
+      <label for="carrera">Cargo</label>
+      <%= f.text_field :carrera, class: 'form-control' %>
+    </div>
+    
+    <div class="form-group">
+      <!--<%= f.label :semestre %>-->
+      <label for="semestre">Sector</label>
+      <%= f.select :semestre, ['Automotriz', 'Agricultura', 'Ganadería', 'Minas', 'Petróleos', 'Industria', 'Transporte', 'Telecomunicaciones', 'Finanzas', 'Turismo'], {}, class: 'form-control' %>
+    </div>
+    
+    <div class="form-group">
+      <!--<%= f.label :habilidades %>-->
+      <label for="habilidades">Habilidades requeridas</label>
+      <%= f.text_area :habilidades, class: 'form-control' %>
+    </div>
+    
+    <div class="form-group">
+      <!--<%= f.label :idiomas %>-->
+      <label for="idiomas">Idiomas requeridos</label>
+      <%= f.text_area :idiomas, class: 'form-control' %>
+    </div>
+    
+    <div class="form-group">
+      <!--<%= f.label :ubicacion %>-->
+      <label for="ubicacion">Ubicación</label>
+      <%= f.text_area :ubicacion, class: 'form-control' %>
+    </div>
+    
+    
+    
+    
+  <% end %>
   
   <div class="form-group">
     <%= f.submit "Actualizar Perfil", class: 'btn btn-primary' %>
