--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -24,12 +24,18 @@
                   <h2><%= user.profile.first_name %> <%= user.profile.last_name %></h2>
                   <% end %>
                   <p>
-                    <%= user.profile.job_title %>
-                    <br />
-                    <%= user.profile.carrera %>
+                    <% if user.plan_id == 1 %>
+                      <%= user.profile.job_title %>
+                      <br />
+                      <%= user.profile.carrera %>
+                    <% else %>
+                      <%= user.profile.carrera %>
+                        <br />
+                      <%= user.profile.facultad %>
+                    <% end %>
                     
                     <% if user.plan_id == 2 %>
-                      <span class="label label-danger">PRO</span>
+                      <span class="label label-danger">Empresario</span>
                     <% end %>
                   </p>
                 </div>
