Agregado etiquetas de sector

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -32,6 +32,7 @@
                       <%= user.profile.carrera %>
                         <br />
                       <%= user.profile.facultad %>
+                      <span class="label label-warning"><%= user.profile.semestre %></span>
                     <% end %>
                     
                     <% if user.plan_id == 2 %>
